--- a/views/info.ejs
+++ b/views/info.ejs
@@ -64,7 +64,7 @@
         <h1>
             Welcome to the main site
         </h1>
-        <h2>You will not find what you are looking for here. Please ask Nicusch for the correct link to your downloads,
+        <h2>If you cant find what you are looking for here. Please ask the Owner for the correct link to your downloads,
             but since you are here. We got a list of Public folders for you.</h2>
         </h1>
         <table>
